Fixed navbar spacing, added banners to a few pages, started working on video save to playlist feature

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,3 +1,6 @@
+.navbar {
+    margin-bottom: 0;
+}
 .nav {
    font-family: ‘Arial Black’, Gadget, sans-serif;
    font-weight: bold;
